@@ -181,7 +181,8 @@ boolean read_file_details(const char *file_name, boolean is_audio) {
 
     lives_alarm_clear(alarm_handle);
 
-    if (!timeout) {
+    if (infofile != NULL) {
+      timeout = FALSE;
       mainw->read_failed = FALSE;
       lives_fgets(mainw->msg, 512, infofile);
       fclose(infofile);
@@ -1060,7 +1061,8 @@ boolean get_handle_from_info_file(int index) {
 
     lives_alarm_clear(alarm_handle);
 
-    if (!timeout) {
+    if (infofile != NULL) {
+      timeout = FALSE;
       mainw->read_failed = FALSE;
       lives_fgets(mainw->msg, 256, infofile);
       fclose(infofile);
@@ -3999,7 +4001,8 @@ boolean read_headers(const char *file_name) {
 
           lives_alarm_clear(alarm_handle);
 
-          if (!timeout) {
+          if (infofile != NULL) {
+            timeout = FALSE;
             mainw->read_failed = FALSE;
             lives_fgets(buff, 1024, infofile);
             fclose(infofile);
@@ -4249,7 +4252,8 @@ boolean read_headers(const char *file_name) {
 
     lives_alarm_clear(alarm_handle);
 
-    if (!timeout) {
+    if (infofile != NULL) {
+      timeout = FALSE;
       mainw->read_failed = FALSE;
       lives_fgets(buff, 1024, infofile);
       fclose(infofile);
