@@ -4662,10 +4662,10 @@ void wait_for_bg_audio_sync(int fileno) {
   int alarm_handle = lives_alarm_set(LIVES_SHORTEST_TIMEOUT);
   int fd;
 
-  while ((fd = open(afile, O_RDONLY)) == -1 && !(timeout = lives_alarm_get(alarm_handle))) {
+  while ((fd = open(afile, O_RDONLY)) < 0 && !(timeout = lives_alarm_get(alarm_handle))) {
     lives_usleep(prefs->sleep_time);
   }
-  if (fd != -1) close(fd);
+  if (fd >= 0) close(fd);
   lives_free(afile);
   lives_alarm_clear(alarm_handle);
 }
