@@ -1,11 +1,15 @@
 Version 2.10.3
 --------------
-Allow cancel in VJ / Pre-decode all frames
 Fix for "Delete Set" not removing files from disk.
 Fix crash when selecting project directory with new install.
 Fix crash when starting playback with some generators (e.g. plasma) [regression].
 Fix to prevent spurious file removal when checking for plugins in a non-existent directory.
+Fix occasional crash with audio driven video generators.
 Load theme correctly on fresh installs.
+Render silence to end of video if necessary during rendering.
+Improvements to openGL playback plugin, including much smoother playback.
+Re-enable Advanced options for the openGL playback plugin.
+Allow cancel in VJ / Pre-decode all frames
 
 
 
